--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build (CJS + ESM + d.ts)
-        run: npm run build
+      # - name: Build (CJS + ESM + d.ts)
+      #   run: npm run build
 
       - name: Publish to npm
         env:
