--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raw_lib",
-  "version": "1.0.1222",
+  "version": "1.2.0",
   "description": "RawLib — RawQL engine, adapters and validation module",
   "license": "MIT",
   "author": "Raunak pndey",
@@ -21,11 +21,17 @@
     "publish": "npm publish --access public"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "tsx": "^4.20.5"
+    "tsx": "^4.20.5",
+    "twilio": "^5.10.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.3.3",
     "jest": "^30.1.3",
